--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nggalaxies",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "private": true,
     "scripts": {
         "dev": "nuxt",
@@ -17,6 +17,7 @@
         "nuxt": "^2.15.7"
     },
     "devDependencies": {
+        "@nuxtjs/google-analytics": "^2.4.0",
         "sass": "^1.43.4",
         "sass-loader": "^10.2.0"
     }
