--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nggalaxies",
-    "version": "0.1.5",
+    "version": "0.2.0",
     "private": true,
     "scripts": {
         "dev": "nuxt",
@@ -9,6 +9,7 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
+        "@nuxtjs/axios": "^5.13.6",
         "@nuxtjs/i18n": "^7.2.0",
         "@nuxtjs/pwa": "^3.3.5",
         "bootstrap": "^5.1.3",
